<package format="3">
  <name>ros_gz_point_cloud</name>
  <version>0.7.0</version>
  <description>Point cloud utilities for Gazebo simulation with ROS.</description>
  <license>Apache 2.0</license>
  <maintainer email="adityapande@intrinsic.ai">Aditya Pande</maintainer>
  <maintainer email="ahcorde@openrobotics.org">Alejandro Hernandez</maintainer>

  <author>Louise Poubel</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <depend>ignition-gazebo2</depend> -->
  <depend>gz_sim_vendor</depend>
  <!-- <depend>ignition-rendering2</depend> -->
  <depend>gz_rendering_vendor</depend>
  <!-- <depend>ignition-sensors2</depend> -->
  <depend>gz_sensors_vendor</depend>
  <depend>gz_plugin_vendor</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <!-- <exec_depend>message_runtime</exec_depend> -->
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
